Fix Select overflow value

--- a/src/components/form/Select/Select.module.scss
+++ b/src/components/form/Select/Select.module.scss
@@ -20,13 +20,10 @@
     gap: 12px;
     min-width: 80px;
     width: 100%;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     color: var(--color-black);
     background-color: transparent;
     border: 1px solid transparent;
     transition: color var(--trans), background-color var(--trans), border-color var(--trans);
-    overflow: hidden;
     cursor: pointer;
 
     @include colorStyles($with-color: true, $with-background-color: false);
@@ -81,6 +78,13 @@
       > svg {
         color: var(--color-black4);
       }
+    }
+
+    > span {
+      width: inherit;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
 
     > svg {
